--- a/student-store-ui/src/components/Navbar/Navbar.css
+++ b/student-store-ui/src/components/Navbar/Navbar.css
@@ -1,5 +1,18 @@
 .navbar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  width: 100%;
+  max-width: 100vw;
+  background: var(--dark-blue);
+  color: var(--pure-white);
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 var(--side-padding);
+}
+
+.navbar a {
+  display: inline;
+  text-decoration: none;
+  justify-content: center;
+  padding: 40px;
 }
