--- a/student-store-ui/src/components/Sidebar/Sidebar.css
+++ b/student-store-ui/src/components/Sidebar/Sidebar.css
@@ -1,51 +1,57 @@
 .sidebar {
-  height: 100%;
-  width: 1in;
-
   position: fixed;
-  z-index: 1;
   top: 0;
+  left: -200px;
+  width: 250px;
+  height: 100%;
+  background-color: darkslategrey;
+  transition: left 300ms ease-out;
+}
+.sidebar.active {
   left: 0;
-  overflow-x: hidden;
-  padding-top: 60px;
-  transition: 0.5s;
-
-  background-color: Darkslategrey;
 }
-
-.sidebar a {
-  padding: 8px 8px 8px 32px;
+.sidebar ul {
+  margin: 1;
+  padding: 0;
+}
+.sidebar li {
+  list-style: none;
+}
+.sidebar li a {
+  font-size: 18px;
   text-decoration: none;
-  font-size: 15px;
-  color: #818181;
+  padding: 10px;
   display: block;
-  transition: 0.3s;
+  color: #fff;
 }
 
-.sidebar a:hover {
-  color: #f1f1f1;
-}
-
-.sidebar .closebtn {
+.hamburger {
+  border: none;
+  outline: 0;
+  width: 50px;
   position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+  right: 0px;
+  background-color: darkslategrey;
 }
 
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left 0.5s;
-  padding: 20px;
+.hamburger:after,
+.hamburger:before,
+.hamburger div {
+  background-color: #fff;
+  height: 5px;
+  margin: 7px 0;
+  border-radius: 3px;
+  content: "";
+  display: block;
+  transition: all 300ms ease-in-out;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidebar {
-    padding-top: 15px;
-  }
-  .sidebar a {
-    font-size: 18px;
-  }
+.sidebar.active .hamburger:before {
+  transform: translateY(12px) rotate(135deg);
+}
+.sidebar.active .hamburger::after {
+  transform: translateY(-12px) rotate(-135deg);
+}
+.sidebar.active .hamburger div {
+  transform: scale(0);
 }
