--- a/student-store-ui/src/components/Hero banner/Herobanner.css
+++ b/student-store-ui/src/components/Hero banner/Herobanner.css
@@ -2,7 +2,10 @@
   width: 100%;
   max-width: 100vw;
   height: 350px;
-  background-color: rgb(119, 222, 119);
+  background-color: rgb(115, 219, 115);
   text-align: center;
   color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: larger;
+  text-align: left;
 }
