--- a/student-store-ui/src/components/App/App.css
+++ b/student-store-ui/src/components/App/App.css
@@ -1,16 +1,10 @@
 .app {
   width: 100%;
   max-width: 100vw;
-  height: 100%;
+
   min-height: 100vh;
   display: flex;
   flex-direction: row;
-}
-.app main {
-  width: 100%;
-  max-width: 100vw;
-  height: 100%;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  background-color: blue;
+  height: 200vh;
 }
