--- a/student-store-ui/src/components/Hero banner/Herobanner.css
+++ b/student-store-ui/src/components/Hero banner/Herobanner.css
@@ -1,7 +1,7 @@
 .Herobanner {
   width: 100%;
   max-width: 100vw;
-  height: 350px;
+  height: 100%;
   background-color: rgb(115, 219, 115);
   text-align: center;
   color: white;
