--- a/student-store-ui/src/components/Navbar/Navbar.css
+++ b/student-store-ui/src/components/Navbar/Navbar.css
@@ -1,9 +1,8 @@
 .navbar {
   width: 100%;
-  max-width: 70in;
-  background: var(--dark-blue);
+  max-width: 100vw;
   color: var(--pure-white);
-  height: 70px;
+  height: 100px;
   display: flex;
   flex-direction: row;
   align-items: center;
