--- a/student-store-ui/src/components/Hero banner/Herobanner.css
+++ b/student-store-ui/src/components/Hero banner/Herobanner.css
@@ -7,5 +7,5 @@
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: larger;
-  text-align: left;
+  text-align: center;
 }
