--- a/student-store-ui/src/components/ContactuS/ContactUs.css
+++ b/student-store-ui/src/components/ContactuS/ContactUs.css
@@ -17,9 +17,12 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
 
   background-color: rgb(14, 57, 57);
+
+  text-indent: 1in;
+  font-size: larger;
+  color: white;
 }
 
 .ContactUs {
@@ -31,4 +34,11 @@
 h1 {
   text-indent: 1in;
   text-align: left;
+}
+.content a {
+  display: inline;
+  text-decoration: none;
+  justify-content: center;
+
+  color: azure;
 }
