--- a/student-store-ui/src/components/ContactuS/ContactUs.css
+++ b/student-store-ui/src/components/ContactuS/ContactUs.css
@@ -42,3 +42,15 @@ h1 {
 
   color: azure;
 }
+.ContactUs .content .media img {
+  transform: translateY(-2px);
+  box-sizing: border-box;
+  width: 500px;
+  height: 330px;
+  align-self: flex-start;
+
+  margin: 0;
+  padding: 0;
+
+  background-color: rgb(14, 57, 57);
+}
