--- a/student-store-ui/src/components/Sidebar/Sidebar.css
+++ b/student-store-ui/src/components/Sidebar/Sidebar.css
@@ -1,11 +1,13 @@
 .sidebar {
   position: fixed;
   top: 0;
-  left: -200px;
-  width: 250px;
+  left: -500px;
+  width: 575px;
   height: 100%;
   background-color: darkslategrey;
   transition: left 300ms ease-out;
+  text-align: center;
+  color: white;
 }
 .sidebar.active {
   left: 0;
