--- a/student-store-ui/src/components/Hero /Hero.css
+++ b/student-store-ui/src/components/Hero /Hero.css
@@ -1,4 +1,4 @@
-.Herobanner {
+.Hero {
   width: 100%;
   max-width: 100vw;
   height: 100%;
@@ -8,4 +8,7 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: larger;
   text-align: center;
+}
+.hero-img {
+  align-items: center;
 }
