--- a/student-store-ui/src/components/Sidebar/Sidebar.css
+++ b/student-store-ui/src/components/Sidebar/Sidebar.css
@@ -1,33 +1,33 @@
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: -500px;
-  width: 575px;
+.all-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+/* .sidebar {
+  margin-top: 100px;
+  width: 200px;
   height: 100%;
   background-color: darkslategrey;
   transition: left 300ms ease-out;
   text-align: center;
   color: white;
 }
-.sidebar.active {
-  left: 0;
-}
-.sidebar ul {
-  margin: 1;
-  padding: 0;
-}
-.sidebar li {
-  list-style: none;
-}
-.sidebar li a {
-  font-size: 18px;
-  text-decoration: none;
-  padding: 10px;
-  display: block;
-  color: #fff;
-}
 
-.hamburger {
+
+
+.active {
+  width: 800px;
+  margin-top: 100px;
+  height: 100%;
+  background-color: darkslategrey;
+  transition: left 300ms ease-out;
+  text-align: center;
+
+} */
+
+/* .hamburger {
   border: none;
   outline: 0;
   width: 50px;
@@ -56,4 +56,4 @@
 }
 .sidebar.active .hamburger div {
   transform: scale(0);
-}
+} */
