--- a/student-store-ui/src/components/Sidebar/Sidebar.css
+++ b/student-store-ui/src/components/Sidebar/Sidebar.css
@@ -2,9 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+  background-color: darkslategrey;
+  color: white;
 }
-
+.here{
+  background-color: darkslategrey;
+  color:white
+}
 /* .sidebar {
   margin-top: 100px;
   width: 200px;
